--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -24,11 +24,11 @@
                 autocomplete="off"
               />
               <label for="firstName">First Name</label>
-              <!-- <div *ngIf="formControls['firstName']?.invalid && (formControls['firstName']?.touched || formControls['firstName']?.dirty)">
+              <div *ngIf="formControls['firstName']?.invalid && (formControls['firstName']?.touched || formControls['firstName']?.dirty)">
                 <small class="text-danger" *ngIf="formControls['firstName']?.errors?.['required']">
                   First name is required.
                 </small>
-              </div> -->
+              </div>
             </div>
 
             <!-- Last Name -->
@@ -41,11 +41,11 @@
                 autocomplete="off"
               />
               <label for="lastName">Last Name</label>
-              <!-- <div *ngIf="formControls['lastName']?.invalid && (formControls['lastName']?.touched || formControls['lastName']?.dirty)">
+              <div *ngIf="formControls['lastName']?.invalid && (formControls['lastName']?.touched || formControls['lastName']?.dirty)">
                 <small class="text-danger" *ngIf="formControls['lastName']?.errors?.['required']">
                   Last name is required.
                 </small>
-              </div> -->
+              </div>
             </div>
 
             <!-- Email -->
@@ -58,14 +58,14 @@
                 autocomplete="off"
               />
               <label for="email">Email</label>
-              <!-- <div *ngIf="formControls['email']?.invalid && (formControls['email']?.touched || formControls['email']?.dirty)">
+              <div *ngIf="formControls['email']?.invalid && (formControls['email']?.touched || formControls['email']?.dirty)">
                 <small class="text-danger" *ngIf="formControls['email']?.errors?.['required']">
                   Email is required.
                 </small>
                 <small class="text-danger" *ngIf="formControls['email']?.errors?.['email']">
                   Please enter a valid email address.
                 </small>
-              </div> -->
+              </div>
             </div>
 
             <!-- Password -->
@@ -77,14 +77,14 @@
                 id="password"
               />
               <label for="password">Password</label>
-              <!-- <div *ngIf="formControls['password']?.invalid && (formControls['password']?.touched || formControls['password']?.dirty)">
+              <div *ngIf="formControls['password']?.invalid && (formControls['password']?.touched || formControls['password']?.dirty)">
                 <small class="text-danger" *ngIf="formControls['password']?.errors?.['required']">
                   Password is required.
                 </small>
                 <small class="text-danger" *ngIf="formControls['password']?.errors?.['minlength']">
                   Password must be at least 6 characters long.
                 </small>
-              </div> -->
+              </div>
             </div>
 
             <!-- Confirm Password -->
@@ -96,7 +96,7 @@
                 id="confirmPassword"
               />
               <label for="confirmPassword">Confirm Password</label>
-              <!-- <div *ngIf="formControls['confirmPassword']?.invalid && (formControls['confirmPassword']?.touched || formControls['confirmPassword']?.dirty)">
+              <div *ngIf="formControls['confirmPassword']?.invalid && (formControls['confirmPassword']?.touched || formControls['confirmPassword']?.dirty)">
                 <small class="text-danger" *ngIf="formControls['confirmPassword']?.errors?.['required']">
                   Confirming your password is required.
                 </small>
@@ -105,7 +105,7 @@
                 <small class="text-danger">
                   Passwords do not match.
                 </small>
-              </div> -->
+              </div>
             </div>
 
             <!-- Submit Button -->
