--- a/src/app/otp/otp.component.html
+++ b/src/app/otp/otp.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="otp-container">
+<div class="otp-container">
   <h2>Vérification OTP</h2>
   <p>Un OTP a été envoyé à {{ email }}</p>
 
@@ -24,4 +24,4 @@
   >
     Vérifier
   </button>
-</div> -->
+</div>
